Small formatting cleanup